# ChangeLog for rox-base/systemtrayn
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/rox-base/systemtrayn/ChangeLog,v 1.7 2007/10/30 18:29:28 fmccor Exp $

  30 Oct 2007; Ferris McCormick <fmccor@gentoo.org>
  systemtrayn-0.3.1-r1.ebuild:
  Add ~sparc for testing --- seems to work.

  10 Jun 2007; Jim Ramsay <lack@gentoo.org> systemtrayn-0.3.1-r1.ebuild:
  Marking ~amd64

*systemtrayn-0.3.1-r1 (10 Feb 2007)

  10 Feb 2007; Jim Ramsay <lack@gentoo.org> -systemtrayn-0.3.1.ebuild,
  +systemtrayn-0.3.1-r1.ebuild:
  Removed src directory on install

  20 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  systemtrayn-0.3.1.ebuild:
  stable x86, bug #155521

  01 Nov 2006; Jim Ramsay <lack@gentoo.org> metadata.xml:
  Now owned by new rox herd

  04 Oct 2006; Jim Ramsay <lack@gentoo.org> ChangeLog:
  Fixed order of version variables for 'include rox'

*systemtrayn-0.3.1 (03 Oct 2006)

  03 Oct 2006; Jim Ramsay <lack@gentoo.org> +metadata.xml,
  +systemtrayn-0.3.1.ebuild:
  New system tray manager for rox-desktop, replaces rox-base/systemtray.
  Imported from breakmygentoo.net, big thanks to Peter Hyman.
