@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/rox-base/tasktray/tasktray-0.5.3.ebuild,v 1.4 2007/10/31 07:28:40 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/rox-base/tasktray/tasktray-0.5.3.ebuild,v 1.5 2007/11/15 20:18:02 drac Exp $
 
 ROX_LIB_VER=1.9.6
 inherit rox
@@ -12,7 +12,7 @@ SRC_URI="ftp://ftp.berlios.de/pub/rox4debian/apps/${MY_PN}-${PV}.tgz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~sparc x86"
+KEYWORDS="amd64 ~sparc x86"
 IUSE=""
 
 RDEPEND=">=dev-python/gnome-python-desktop-2.12"
