@@ -3,18 +3,18 @@ MD5 65446f7c71a7978026be7ee41cbc9377 files/volume-009-no_channels.patch 454
 RMD160 cff6259b7d2fc748383a015b45eb7b022ff1f4f7 files/volume-009-no_channels.patch 454
 SHA256 0d2490f9c410747741ab78e2a82f4dce7c55475d700f51362dce81cd7f7ccc11 files/volume-009-no_channels.patch 454
 DIST Volume-009.tgz 29064 RMD160 713011f40738fe20ddc885799d4fb119ac241897 SHA1 e9aa4306f0d23156266cf8642b94c6353c4dc50c SHA256 97c17b383594061043ff84a31de229a46e0ee9ff79e3a3a9bc600bd7ade4a233
-EBUILD volume-009-r1.ebuild 727 RMD160 bfcd2dc2656d05e710a0dfedcc80ebbc1f766a79 SHA1 c9e0cba77cf19f7ab1840b93a16e87feeb7cac2f SHA256 70a427d81a0dac230b781d4eef2069cfadb61abf23550ccb385c1a1281aa90ea
-MD5 7ed0040490dd5d8f27f41f3e230286bf volume-009-r1.ebuild 727
-RMD160 bfcd2dc2656d05e710a0dfedcc80ebbc1f766a79 volume-009-r1.ebuild 727
-SHA256 70a427d81a0dac230b781d4eef2069cfadb61abf23550ccb385c1a1281aa90ea volume-009-r1.ebuild 727
+EBUILD volume-009-r1.ebuild 730 RMD160 9355dae94dd6e07344109e47a35f41813a5902cf SHA1 663cc3009a396d85a7354a2a7206d213399d7c85 SHA256 2d662c2dbb8b8bf14459057599ad6af048007d7b8d9fcab689ec45abe5ff2df1
+MD5 56769c27f1912713344b7bb8ed528aea volume-009-r1.ebuild 730
+RMD160 9355dae94dd6e07344109e47a35f41813a5902cf volume-009-r1.ebuild 730
+SHA256 2d662c2dbb8b8bf14459057599ad6af048007d7b8d9fcab689ec45abe5ff2df1 volume-009-r1.ebuild 730
 EBUILD volume-009.ebuild 681 RMD160 fe8abcdd76ba174a300a4dfde83828d62fbbd8ca SHA1 be56fbac08f942259ad27af38a2a08b985491aca SHA256 21fe6e63e80c21b89ca5a0ae63a5e61c070e51ee0291dcec5a931ad94b3ee583
 MD5 f62ee14341531136179f8056f3f7a348 volume-009.ebuild 681
 RMD160 fe8abcdd76ba174a300a4dfde83828d62fbbd8ca volume-009.ebuild 681
 SHA256 21fe6e63e80c21b89ca5a0ae63a5e61c070e51ee0291dcec5a931ad94b3ee583 volume-009.ebuild 681
-MISC ChangeLog 1782 RMD160 b207384bb59141299f9b8cf20be57bd200a89a1f SHA1 4d6d2d89ec50c9961704b1e2b599d9aa508a5fa6 SHA256 23aa009717d72bcb01a828a2130a9b1252e28c407a951461089b5e900f7030a6
-MD5 f2248351ecaec1b98f19adb296db6f39 ChangeLog 1782
-RMD160 b207384bb59141299f9b8cf20be57bd200a89a1f ChangeLog 1782
-SHA256 23aa009717d72bcb01a828a2130a9b1252e28c407a951461089b5e900f7030a6 ChangeLog 1782
+MISC ChangeLog 1881 RMD160 485290277b3166b02be6496b683253b7054532d8 SHA1 92ac81fc603c07d976ebbce27c5624e96bd9b23c SHA256 217325fe8fbbedf14cd8de06b9551ff2f5333be43990b5d371b50bdfbf51fe6a
+MD5 5c53242d041ec5d9da0192a139658cf2 ChangeLog 1881
+RMD160 485290277b3166b02be6496b683253b7054532d8 ChangeLog 1881
+SHA256 217325fe8fbbedf14cd8de06b9551ff2f5333be43990b5d371b50bdfbf51fe6a ChangeLog 1881
 MISC metadata.xml 157 RMD160 fd6d83b802caa82822e8bb4d1752063fcda9b47f SHA1 54ccd31d923f052c9111f04c1a7d8b8f04f0a7b2 SHA256 941fe96a972d5a4f49555c01cbfab71d51e81ade3a53322fee549061aa17012c
 MD5 94ae74afbf5ec6b3f8cdcb4ea7c917bb metadata.xml 157
 RMD160 fd6d83b802caa82822e8bb4d1752063fcda9b47f metadata.xml 157
