@@ -1,6 +1,9 @@
 # ChangeLog for rox-base/tasktray
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/rox-base/tasktray/ChangeLog,v 1.18 2007/10/31 07:28:40 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/rox-base/tasktray/ChangeLog,v 1.19 2007/11/15 20:18:02 drac Exp $
+
+  15 Nov 2007; Samuli Suominen <drac@gentoo.org> tasktray-0.5.3.ebuild:
+  amd64 stable wrt #197514
 
   31 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
   tasktray-0.5.3.ebuild:
