@@ -1,6 +1,10 @@
 # ChangeLog for rox-base/systemtrayn
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/rox-base/systemtrayn/ChangeLog,v 1.7 2007/10/30 18:29:28 fmccor Exp $
+# $Header: /var/cvsroot/gentoo-x86/rox-base/systemtrayn/ChangeLog,v 1.8 2007/11/15 20:20:14 drac Exp $
+
+  15 Nov 2007; Samuli Suominen <drac@gentoo.org>
+  systemtrayn-0.3.1-r1.ebuild:
+  amd64 stable wrt #197514
 
   30 Oct 2007; Ferris McCormick <fmccor@gentoo.org>
   systemtrayn-0.3.1-r1.ebuild:
